--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1172,7 +1172,14 @@ register-left a {
 	margin-bottom: 0%;
 	cursor: pointer;
 }
-
+.register-form{
+	h3{
+		font-size: 1.2rem;
+	}
+}
+#edit-form input[type="submit"]{
+	width: auto;
+}
 /*=============================IMPORT RESPONSIVE CSS===============================*/
 
 @import "responsive.scss";
