--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1016,7 +1016,9 @@ table {
 
 .tab-content {
   border: 1px solid rgba(60, 39, 39, 0.4);
-  min-height: 325px; }
+  min-height: 325px;
+  float: left;
+  width: 100%; }
 
 #accordion-style-1 .btn-link {
   font-weight: 400;
@@ -1282,12 +1284,16 @@ select.models.active {
   text-align: center;
   color: #fff;
   margin-top: 4%; }
+  @media all and (max-width: 1023px) {
+    .register-left {
+      margin-bottom: 35px; } }
 
 .register-left input {
   border: none;
   border-radius: 1.5rem;
   padding: 2%;
   width: 60%;
+  min-width: 175px;
   background: #f8f9fa;
   font-weight: bold;
   color: #383d41;
@@ -1300,7 +1306,15 @@ select.models.active {
 .register-right {
   background: #f8f9fa;
   border-top-left-radius: 10% 50%;
-  border-bottom-left-radius: 10% 50%; }
+  border-bottom-left-radius: 10% 50%;
+  overflow: auto; }
+  @media all and (max-width: 1023px) {
+    .register-right {
+      -webkit-border-radius: 0;
+      -moz-border-radius: 0;
+      -ms-border-radius: 0;
+      -o-border-radius: 0;
+      border-radius: 0; } }
 
 .register-left img {
   margin-top: 15%;
@@ -1308,6 +1322,11 @@ select.models.active {
   width: 25%;
   -webkit-animation: mover 2s infinite alternate;
   animation: mover 1s infinite alternate; }
+  @media all and (max-width: 1023px) {
+    .register-left img {
+      margin-top: 0;
+      max-width: 75px;
+      margin-bottom: 15px; } }
 
 @-webkit-keyframes mover {
   0% {
@@ -1323,12 +1342,21 @@ select.models.active {
   font-weight: lighter;
   padding: 12%;
   margin-top: -9%; }
+  @media all and (max-width: 1023px) {
+    .register-left p {
+      padding: 2%;
+      margin-top: 10px; } }
 
 .register .register-form {
   padding: 0% 15%;
-  margin-top: 10%;
-  height: 475px;
-  overflow-y: auto; }
+  height: 500px;
+  overflow-y: auto;
+  margin-top: 5px; }
+  @media all and (max-width: 1023px) {
+    .register .register-form {
+      padding: 0% 15px;
+      margin-top: 15px;
+      height: auto; } }
 
 .btnRegister {
   text-align: center;
@@ -1336,12 +1364,13 @@ select.models.active {
   margin: 5% 0 2%;
   border: none;
   border-radius: 1.5rem;
-  padding: 0.25%;
+  padding: 0.55%;
   background: #3c2727;
   color: #fff !important;
   font-weight: 600;
   width: 20%;
-  cursor: pointer; }
+  cursor: pointer;
+  min-width: 100px; }
 
 .btnDelete {
   text-align: center;
@@ -1354,7 +1383,8 @@ select.models.active {
   color: #fff !important;
   font-weight: 600;
   width: 20%;
-  cursor: pointer; }
+  cursor: pointer;
+  min-width: 100px; }
 
 .register .nav-tabs {
   margin-top: 3%;
@@ -1410,6 +1440,9 @@ select.models.active {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
   margin: 15px 0;
   overflow: hidden; }
+  @media all and (max-width: 767px) {
+    .offer {
+      margin: 0 0 15px; } }
 
 .offer-radius {
   border-radius: 7px; }
@@ -1505,6 +1538,9 @@ register-left a {
 
 .register-form h3 {
   font-size: 1.2rem; }
+  @media all and (max-width: 767px) {
+    .register-form h3 {
+      font-size: 14px; } }
 
 #edit-form input[type="submit"] {
   width: auto; }
