--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1033,6 +1033,11 @@ select.models.active {
 	width: 48%;
 	min-width: 280px;
 	float: right;
+	@media all and (max-width:767px){
+		float: none;
+		margin-left: auto;
+		margin-right: auto;
+	}
 }
 
 .register .nav-tabs .nav-link {
