--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -742,8 +742,7 @@ table {
   margin-top: 70px; }
   @media all and (max-width: 767px) {
     #login-form {
-      margin-top: 195px;
-      border-top: 1px solid red; } }
+      margin-top: 175px; } }
   #login-form .btn {
     width: 150px;
     margin: 0 auto;
