--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -582,7 +582,7 @@ table {
 .tab-content {
 	border: 1px solid $bg-tr-black2;
 	min-height: 325px;
-	float: left;
+	//float: left;
 	width: 100%;
 }
 
