--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -229,6 +229,9 @@ table {
 	@media all and (max-width:767px){
 		margin-top: 175px;
 	}
+	@media all and (max-width:480px){
+		margin-top: 125px;
+	}
 
 	.btn {
 		width: 150px;
@@ -582,10 +585,10 @@ table {
 .tab-content {
 	border: 1px solid $bg-tr-black2;
 	min-height: 325px;
-//	float: left;
-	width: 100%;
-}
+	
+ }
 .register .tab-content{
+	clear: both;
 	float: left;
 }
 //------------ accordion -------------
@@ -940,9 +943,15 @@ select.models.active {
 	overflow: auto;	
 	@media all and (max-width:1023px){
  		@include radius(0);
+		padding-top: 35px;
 	}
 }
-
+.modal-footer {
+	.close{
+		padding:5px 15px;
+		font-size: 14px;
+	}
+}
 .register-left img {
 	margin-top: 15%;
 	margin-bottom: 5%;
