--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -452,7 +452,9 @@ table {
 		border-top: 2px solid #fff;
 	}
 }
-
+.dashboard-bg .wrapper-card {
+	background: transparent;
+}
 
 /*============Content Page=============*/
 .content-page {
