--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -586,9 +586,8 @@ table {
 
 .tab-content {
 	border: 1px solid $bg-tr-black2;
-	min-height: 325px;
-	
- }
+	min-height: 325px;	
+}
 .register .tab-content{
 	clear: both;
 	float: left;
@@ -1234,6 +1233,9 @@ register-left a {
 #edit-form input[type="submit"]{
 	width: auto;
  	
+}
+#example_wrapper{
+	margin-bottom: 5px;
 }
 /*=============================IMPORT RESPONSIVE CSS===============================*/
 
