--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -1,78 +1,91 @@
 /*===================1024px====================*/
-@media all and (max-width:1199px){
-	form{
+@media all and (max-width: 1199px) {
+	form {
 		font-size: 13.5px;
 	}
 }
- 
+
 /*===================992px====================*/
-@media all and (max-width:1023px){
-	.tab-head ul .nav-link{
+@media all and (max-width: 992px) {
+	.tab-head ul .nav-link {
 		padding: 5px 10px;
 	}
-	ul.breadcrumb li a{
+
+	ul.breadcrumb li a {
 		font-size: inherit;
 	}
 }
+
 /*===================768px====================*/
-@media all and (max-width:991px){
+@media all and (max-width: 991px) {
 	.card [class*="card-header-"] {
 		margin: 0px 5px 0;
-	 }
-	.wrapper-card{
-		.card-title{
-			font-size: 40px;
-		}
-		.card [class*="card-header-"] .card-icon, .card [class*="card-header-"] .card-text{
-			padding: 10px; 	
-		}
 	}
-	#question-bank{
-		.nav-link.btn{
-			padding: 7px 25px;
-			min-width: 225px;
-			&+.nav-link.btn{
-				margin-left: 0;
- 			}
-		}
+
+	.wrapper-card .card-title {
+		font-size: 40px;
 	}
+
+	.wrapper-card .card [class*="card-header-"] .card-icon,
+	.wrapper-card .card [class*="card-header-"] .card-text {
+		padding: 10px;
+	}
+
+	#question-bank .nav-link.btn {
+		padding: 7px 25px;
+		min-width: 240px;
+	}
+
+	#question-bank .nav-link.btn + .nav-link.btn {
+		margin-left: 0;
+	}
+
 	ul.breadcrumb li + li:before {
 		padding: 5px 4px;
-    }
+	}
 }
 
+@media all and (max-width: 767px) {
 
-@media all and (max-width:767px){
 	/*==========GLOBAL STYLE=========*/
-	body{
+	body {
 		font-size: 13px;
 	}
-   .header .container{
- 		max-width: auto;
- 	}
+
+	.header .container {
+		max-width: auto;
+	}
+
 	.content {
 		padding-bottom: 35px;
 	}
-	h1{
+
+	h1 {
 		font-size: 1.5rem;
 	}
-	h2{
+
+	h2 {
 		font-size: 1.2rem;
 	}
-	h3{
+
+	h3 {
 		font-size: 1rem;
 	}
-	h4{
+
+	h4 {
 		font-size: .95rem;
 	}
-	.pdt{
+
+	.pdt {
 		padding-top: 115px;
 	}
+
 	/*===========================*/
-	.logo{
+	.logo {
 		width: 50px;
 		height: 50px;
 	}
+
 	#collapsibleNavbar {
 		position: fixed;
 		bottom: 0;
@@ -80,68 +93,95 @@
 		padding: 30px 0;
 		height: 100%;
 		left: -85%;
-		background: $bg-l-black;
+		background: #3c2727;
 		overflow: hidden;
-		text-align: center; 
+		text-align: center;
 		z-index: 5;
-		  @include transition(0.4s);
-		  & li a {
-			padding: 10px 15px;
-			font-size: 20px;
-			display: block;
-		}
+		-webkit-transition: 0.4s;
+		-moz-transition: 0.4s;
+		-ms-transition: 0.4s;
+		-o-transition: 0.4s;
+		transition: 0.4s;
 	}
-	.show#collapsibleNavbar{
+
+	#collapsibleNavbar li a {
+		padding: 10px 15px;
+		font-size: 20px;
+		display: block;
+	}
+
+	.show#collapsibleNavbar {
 		left: 0;
-	} 
-	.content-page .chapter-list a{
+	}
+
+	.content-page .chapter-list a {
 		padding-left: 10px;
 		padding-right: 10px;
 	}
+
 	.content-page .chapter-list > [class^="col-"] {
 		padding-top: 7px;
 		padding-bottom: 7px;
 	}
-	.footer{
+
+	.footer {
 		font-size: 13px;
 		line-height: 1.5;
-		h6{
-			font-size: 13px;
-			line-height: 1.4;
-		}
 	}
-	.tab-head ul{
+
+	.footer h6 {
+		font-size: 13px;
+		line-height: 1.4;
+	}
+
+	.tab-head ul {
 		padding-top: 30px;
-			.nav-link{
-			padding: 3px 7px;
-		}
 	}
-	.tab-content{
+
+	.tab-head ul .nav-link {
+		padding: 3px 7px;
+	}
+
+	.tab-content {
 		padding-left: 10px !important;
 		padding-right: 10px !important;
 		font-size: 13px;
 	}
-	#accordion-style-1 .card-body{
+
+	#accordion-style-1 .card-body {
 		padding-left: 10px;
 		padding-right: 10px;
 	}
-	.dataTable{
+
+	.dataTable {
 		font-size: 13px;
 	}
-	#brainstrom,#tell-teacher,#find-out{
-		ul,ol{
-			list-style:disc;
-			padding-left: 10px;
-		}
+
+	#brainstrom ul,
+	#brainstrom ol,
+	#tell-teacher ul,
+	#tell-teacher ol,
+	#find-out ul,
+	#find-out ol {
+		list-style: disc;
+		padding-left: 10px;
 	}
-	.breadcrumb-wrap{
-		padding:4px 10px;
+
+	.breadcrumb-wrap {
+		padding: 4px 10px;
 		top: 65px;
-		ul.breadcrumb{
-			padding: 0;
-			li + li:before{
-				padding: 5px;
-			}
-		}
 	}
+
+	.breadcrumb-wrap ul.breadcrumb {
+		padding: 0;
+	}
+
+	.breadcrumb-wrap ul.breadcrumb li + li:before {
+		padding: 5px;
+	}
+
+	.tab-content p {
+		text-align: justify;
+	}
+
 }
