--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1629,6 +1629,26 @@ register-left a {
   display: inline-block;
   width: auto; }
 
+.digi-content .card [class*="card-header-"] {
+  width: 50%;
+  margin: 0 auto; }
+
+.digi-link {
+  text-decoration: none;
+  color: #fff;
+  border: 1px solid #fff;
+  padding: 0px 20px;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -ms-transition: 0.4s;
+  -o-transition: 0.4s;
+  transition: 0.4s;
+  display: inline-block; }
+  .digi-link:hover {
+    color: #3c2727;
+    text-decoration: none;
+    background: #fff; }
+
 /*=============================IMPORT RESPONSIVE CSS===============================*/
 /*===================1024px====================*/
 @media all and (max-width: 1199px) {
