--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -815,7 +815,7 @@ select.models.active {
 	position: absolute;
 	left: 0;
 	right: 0;
-	bootom: 100%;
+	botom: 100%;
 	background: rgba(60, 39, 39, 0.8);
 	height: 0%;
 	color: #fff;
