--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,11 +99,12 @@ body, html {
     padding: 0px 5px; }
   .footer .footer-nav li a {
     color: #fff; }
+  .footer ul, .footer ol {
+    list-style: none; }
 
 /*-----------------------------------*/
-ul,
-ol {
-  list-style-type: none; }
+img {
+  max-width: 100%; }
 
 [type="submit"] {
   background: #bd5d38;
@@ -1224,7 +1225,7 @@ select.models.active {
   position: absolute;
   left: 0;
   right: 0;
-  bootom: 100%;
+  botom: 100%;
   background: rgba(60, 39, 39, 0.8);
   height: 0%;
   color: #fff;
