--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -43,6 +43,10 @@
 	ul.breadcrumb li + li:before {
 		padding: 5px 4px;
 	}
+    .card-student  .card-title {
+         font-size: 30px;
+    }
+
 }
 
 @media all and (max-width: 767px) {
