pull and push the pages+++

--- a/smart-content/samples/book/css/steve-jobs - Copy.css
+++ b/smart-content/samples/book/css/steve-jobs - Copy.css
@@ -236,11 +236,11 @@ body, ul, table, form{
 	background-position:-1920px 0 !important;
 }
 
-.sj-book .p-s-last{
+.sj-book .p111{
 	background-position:-960px 0 !important;
 }
 
-.sj-book .p-last{
+.sj-book .p112{
 	background-position:-1440px 0 !important;
 }
 
