pull and push the pages

--- a/smart-content/samples/book/css/steve-jobs.css
+++ b/smart-content/samples/book/css/steve-jobs.css
@@ -236,12 +236,12 @@ body, ul, table, form{
 	background-position:-1920px 0 !important;
 }
 
-.sj-book .p-s-last{
-	background-position:-960px 0 !important;
+.sj-book .p114{
+	background:url(../pics/102.jpg);
 }
 
-.sj-book .p-last{
-	background-position:-1440px 0 !important;
+.sj-book .p115{
+background:url(../pics/103.jpg);
 }
 
 .sj-book .hard{
