--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1402,6 +1402,9 @@ register-left a {
     height: 200px;
     object-fit: cover;
 }
+.bg-blue{
+    background: #143c75;
+}
 
 /*=============================IMPORT RESPONSIVE CSS===============================*/
 
