--- a/smart-content/samples/book/css/steve-jobs.css
+++ b/smart-content/samples/book/css/steve-jobs.css
@@ -132,11 +132,11 @@ form {
     -o-transition: -webkit-box-shadow 0.5s;
     -ms-transition: -ms-box-shadow 0.5s;
 
-    -webkit-box-shadow: 0 0 10px #000;
-    -moz-box-shadow: 0 0 10px #000;
-    -ms-box-shadow: 0 0 10px #000;
-    -o-box-shadow: 0 0 10px #000;
-    box-shadow: 0 0 10px #000;
+    -webkit-box-shadow:inset 0 0 100px #fff;
+    -moz-box-shadow:inset 0 0 100px #fff;
+    -ms-box-shadow:inset 0 0 100px #fff;
+    -o-box-shadow:inset 0 0 100px #fff;
+    box-shadow:inset 0 0 100px #fff;
 }
 
 .sj-book .page {
@@ -409,7 +409,7 @@ form {
 /*---------------------------------------*/
 ::-webkit-scrollbar {
     width: 5px;
-    background: #fff;
+    background: #000;
   }
 
   ::-webkit-scrollbar-track {
@@ -420,5 +420,5 @@ form {
   ::-webkit-scrollbar-thumb {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-      background: #333;
+      background: #fff;
   }
