--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,10 @@ body.side-panel .dev-icons {
 body.side-panel .dev-icons .list-inline-item i:hover {
   color: #BD5D38;
 }
+body.side-panel input[type=checkbox] {
+  left: -22px !important;
+  position: relative;
+}
 
 /*-----------------------------------*/
 h1 {
@@ -89,7 +93,8 @@ h4 {
   font-size: 1.2rem;
 }
 
-body, html {
+body,
+html {
   color: #333;
   overflow-x: hidden;
 }
@@ -127,7 +132,8 @@ body, html {
 .footer .footer-nav li a {
   color: #fff;
 }
-.footer ul, .footer ol {
+.footer ul,
+.footer ol {
   list-style: none;
 }
 
@@ -272,7 +278,8 @@ body {
 }
 
 /*-----------------UI.css-------------*/
-.ui-datepicker-month, .ui-datepicker-year {
+.ui-datepicker-month,
+.ui-datepicker-year {
   display: inline-block !important;
 }
 
@@ -287,14 +294,16 @@ body {
   padding: 0.2em 0;
 }
 
-.ui-datepicker .ui-datepicker-prev, .ui-datepicker .ui-datepicker-next {
+.ui-datepicker .ui-datepicker-prev,
+.ui-datepicker .ui-datepicker-next {
   position: absolute;
   top: 2px;
   width: 1.8em;
   height: 1.8em;
 }
 
-.ui-datepicker .ui-datepicker-prev-hover, .ui-datepicker .ui-datepicker-next-hover {
+.ui-datepicker .ui-datepicker-prev-hover,
+.ui-datepicker .ui-datepicker-next-hover {
   top: 1px;
 }
 
@@ -314,7 +323,8 @@ body {
   right: 1px;
 }
 
-.ui-datepicker .ui-datepicker-prev span, .ui-datepicker .ui-datepicker-next span {
+.ui-datepicker .ui-datepicker-prev span,
+.ui-datepicker .ui-datepicker-next span {
   display: block;
   position: absolute;
   left: 50%;
@@ -362,7 +372,8 @@ body {
   padding: 1px;
 }
 
-.ui-datepicker td span, .ui-datepicker td a {
+.ui-datepicker td span,
+.ui-datepicker td a {
   display: block;
   padding: 0.2em;
   text-align: right;
