--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -1,164 +1,181 @@
 // Global styling for this template
 
 body.side-panel {
-	padding-left: $sidebar-base-width;
-	@include body-font;
-	padding-top: 54px;
-	color: $gray-600;
+    padding-left: $sidebar-base-width;
+    @include body-font;
+    padding-top: 54px;
+    color: $gray-600;
 
-	@media (min-width: 992px) {
+    @media (min-width: 992px) {
 
-		padding-top: 0;
-		padding-left: $sidebar-base-width;
+        padding-top: 0;
+        padding-left: $sidebar-base-width;
 
-	}
+    }
 
-	@media (max-width: 991px) {
-		padding-left: 0;
-	}
+    @media (max-width: 991px) {
+        padding-left: 0;
+    }
 
-	h1,
-	h2,
-	h3,
-	h4,
-	h5,
-	h6 {
-		@include heading-font;
-		font-weight: 700;
-		text-transform: uppercase;
-		color: $gray-800;
-	}
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        @include heading-font;
+        font-weight: 700;
+        text-transform: uppercase;
+        color: $gray-800;
+    }
 
-	h1 {
-		font-size: 6rem;
-		line-height: 5.5rem;
-	}
+    h1 {
+        font-size: 6rem;
+        line-height: 5.5rem;
+    }
 
-	h2 {
-		font-size: 3.5rem;
-	}
+    h2 {
+        font-size: 3.5rem;
+    }
 
-	h3 {
-		font-size: 2rem;
-	}
+    h3 {
+        font-size: 2rem;
+    }
 
-	p.lead {
-		font-size: 1.15rem;
-		font-weight: 400;
-	}
+    p.lead {
+        font-size: 1.15rem;
+        font-weight: 400;
+    }
 
-	.subheading {
-		text-transform: uppercase;
-		font-weight: 500;
-		@include heading-font;
-		font-size: 1.5rem;
-	}
+    .subheading {
+        text-transform: uppercase;
+        font-weight: 500;
+        @include heading-font;
+        font-size: 1.5rem;
+    }
 
-	.social-icons {
-		a {
-			display: inline-block;
-			height: 3.5rem;
-			width: 3.5rem;
-			background-color: $gray-700;
-			color: $white !important;
-			border-radius: 100%;
-			text-align: center;
-			font-size: 1.5rem;
-			line-height: 3.5rem;
-			margin-right: 1rem;
+    .social-icons {
+        a {
+            display: inline-block;
+            height: 3.5rem;
+            width: 3.5rem;
+            background-color: $gray-700;
+            color: $white !important;
+            border-radius: 100%;
+            text-align: center;
+            font-size: 1.5rem;
+            line-height: 3.5rem;
+            margin-right: 1rem;
 
-			&:last-child {
-				margin-right: 0;
-			}
+            &:last-child {
+                margin-right: 0;
+            }
 
-			&:hover {
-				background-color: $primary;
-			}
-		}
-	}
+            &:hover {
+                background-color: $primary;
+            }
+        }
+    }
 
-	.dev-icons {
-		font-size: 3rem;
+    .dev-icons {
+        font-size: 3rem;
 
-		.list-inline-item i {
-			&:hover {
-				color: $primary;
-			}
-		}
-	}
-}
+        .list-inline-item i {
+            &:hover {
+                color: $primary;
+            }
+        }
+    }
 
-/*-----------------------------------*/
-h1{
-	font-size: 2.5rem;
-}
-h2{
-	font-size: 2rem;
-}
-h3{
-	font-size: 1.5rem;
-}
-h4{
-	font-size: 1.2rem;
-}
-body,html{
-	color: #333;
-	overflow-x: hidden;
- }
- :focus {
-    outline: none !important;
-}
-/*--------------footer-----------*/
-.footer {
-	padding: 20px 0 15PX;
-	border-top: 1px solid $bg-l-black;
-	text-align: center;
-
-	h6 {
-		display: inline-block;
-		line-height: 1;
-		vertical-align: middle;
-		margin: 0;
-		font-weight: 400;
-	}
-
-	.footer-nav {
-		display: inline-block;
-		margin-bottom: 0;
-		line-height: 1;
-		vertical-align: middle;
-		margin-right: 15px;
-		padding-right: 15px;
-		border-right: 1px solid #ccc;
-	}
-
-	.footer-nav li {
-		float: left;
-		padding: 0px 5px;
-	}
-
-	.footer-nav li a {
-		color: #fff;
-	}
-    ul,ol{
-        list-style: none; 
+    input[type=checkbox] {
+         
+        left: -22px !important;
+        position: relative;
+       
     }
 
 }
 
 /*-----------------------------------*/
-img{
+h1 {
+    font-size: 2.5rem;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+h3 {
+    font-size: 1.5rem;
+}
+
+h4 {
+    font-size: 1.2rem;
+}
+
+body,
+html {
+    color: #333;
+    overflow-x: hidden;
+}
+
+:focus {
+    outline: none !important;
+}
+
+/*--------------footer-----------*/
+.footer {
+    padding: 20px 0 15PX;
+    border-top: 1px solid $bg-l-black;
+    text-align: center;
+
+    h6 {
+        display: inline-block;
+        line-height: 1;
+        vertical-align: middle;
+        margin: 0;
+        font-weight: 400;
+    }
+
+    .footer-nav {
+        display: inline-block;
+        margin-bottom: 0;
+        line-height: 1;
+        vertical-align: middle;
+        margin-right: 15px;
+        padding-right: 15px;
+        border-right: 1px solid #ccc;
+    }
+
+    .footer-nav li {
+        float: left;
+        padding: 0px 5px;
+    }
+
+    .footer-nav li a {
+        color: #fff;
+    }
+
+    ul,
+    ol {
+        list-style: none;
+    }
+
+}
+
+/*-----------------------------------*/
+img {
     max-width: 100%;
 }
 
 [type="submit"] {
-	background: $bg-orange;
-	color: #fff;
-	width: 100%;
+    background: $bg-orange;
+    color: #fff;
+    width: 100%;
 }
 
 ::-webkit-input-placeholder {
-	color: rgba(0, 0, 0, 0.25) !important;
+    color: rgba(0, 0, 0, 0.25) !important;
 }
 
 button.dt-button:active:not(.disabled):hover:not(.disabled),
@@ -167,189 +184,375 @@ div.dt-button:active:not(.disabled):hover:not(.disabled),
 div.dt-button.active:not(.disabled):hover:not(.disabled),
 a.dt-button:active:not(.disabled):hover:not(.disabled),
 a.dt-button.active:not(.disabled):hover:not(.disabled) {
-	background: $bg-orange;
-	border-color: $bg-orange;
-	color: $white;
+    background: $bg-orange;
+    border-color: $bg-orange;
+    color: $white;
 }
 
 button.dt-button:focus:not(.disabled),
 div.dt-button:focus:not(.disabled),
 a.dt-button:focus:not(.disabled) {
-	background: $bg-d-orange;
-	color: $white;
-	border-color: $bg-d-orange;
+    background: $bg-d-orange;
+    color: $white;
+    border-color: $bg-d-orange;
 }
 
 .pdt {
-	padding-top: 130px;
+    padding-top: 130px;
 }
 
 //-----------Breadcrumbs---------
 
 .breadcrumb-wrap {
-	background: #3c2727;
-	color: #fff;
-	padding: 8px 16px;
+    background: #3c2727;
+    color: #fff;
+    padding: 8px 16px;
 
-	p {
-		margin-bottom: 0;
-		line-height: 1.4;
-	}
+    p {
+        margin-bottom: 0;
+        line-height: 1.4;
+    }
 }
 
 //-----Breadcrumb
 ul.breadcrumb {
-	padding: 0 15px;
-	margin-bottom: 0;
-	list-style: none;
-	background: transparent;
+    padding: 0 15px;
+    margin-bottom: 0;
+    list-style: none;
+    background: transparent;
 }
 
- 
+
 ul.breadcrumb li a {
-	display: inline;
-	color: $c-orange;
-	color: #fff;
-	font-size: 15px;
- }
+    display: inline;
+    color: $c-orange;
+    color: #fff;
+    font-size: 15px;
+}
 
 ul.breadcrumb li + li:before {
-	padding: 8px;
-	color: #fff;
-	content: "/\00a0";
+    padding: 8px;
+    color: #fff;
+    content: "/\00a0";
 }
 
 input[disabled] {
-	cursor: not-allowed;
+    cursor: not-allowed;
 }
 
 //---------------- Scroll Stylr -----------
-@media all and (min-width:768px){
-	::-webkit-scrollbar {
-		width: 5px;
-	}
+@media all and (min-width:768px) {
+    ::-webkit-scrollbar {
+        width: 5px;
+    }
 
-	::-webkit-scrollbar-track {
-		-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-		border-radius: 10px;
-	}
+    ::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        border-radius: 10px;
+    }
 
-	::-webkit-scrollbar-thumb {
-		border-radius: 10px;
-		-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-	}
+    ::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+    }
 }
 
 //--------------------table line------------
 .hr-style {
-	position: relative;
-	 &:before {
-		content: '';
- 		width: 100%;
-		left: 0;
-		top: 0;
- 		border: 0;
-		position: absolute;
-		height: 1px;
-		background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-		background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-		background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-		background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
-	}
+    position: relative;
+
+    &:before {
+        content: '';
+        width: 100%;
+        left: 0;
+        top: 0;
+        border: 0;
+        position: absolute;
+        height: 1px;
+        background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+        background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+        background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+        background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
+    }
+
     &.hr-style2:before {
-		height: 2px;
-  	}
+        height: 2px;
+    }
 }
 
 .tx-c {
-	text-align: center;
+    text-align: center;
 }
-.hidden-xs{
-	@media all and (max-width:767px){
-		display: none;
-	}
+
+.hidden-xs {
+    @media all and (max-width: 767px) {
+        display: none;
+    }
 }
-.a_submit{
-	padding: 0;
-	a{
-		padding: .375rem .75rem;
-	}
+
+.a_submit {
+    padding: 0;
+
+    a {
+        padding: .375rem .75rem;
+    }
 }
-.input-btn{
-	padding: 7px 20px;	
+
+.input-btn {
+    padding: 7px 20px;
 }
-input[type="date"].form-control{
-	padding: .375rem .15rem;
+
+input[type="date"].form-control {
+    padding: .375rem .15rem;
 }
-body{
- @include transition(0.4s);
+
+body {
+    @include transition(0.4s);
 }
+
 /*-----------------UI.css-------------*/
-.ui-datepicker-month,.ui-datepicker-year{
-	display: inline-block !important;
+.ui-datepicker-month,
+.ui-datepicker-year {
+    display: inline-block !important;
 }
-.ui-datepicker { width: 17em; padding: .2em .2em 0; display: none; }
-.ui-datepicker .ui-datepicker-header { position:relative; padding:.2em 0; }
-.ui-datepicker .ui-datepicker-prev, .ui-datepicker .ui-datepicker-next { position:absolute; top: 2px; width: 1.8em; height: 1.8em; }
-.ui-datepicker .ui-datepicker-prev-hover, .ui-datepicker .ui-datepicker-next-hover { top: 1px; }
-.ui-datepicker .ui-datepicker-prev { left:2px; }
-.ui-datepicker .ui-datepicker-next { right:2px; }
-.ui-datepicker .ui-datepicker-prev-hover { left:1px; }
-.ui-datepicker .ui-datepicker-next-hover { right:1px; }
-.ui-datepicker .ui-datepicker-prev span, .ui-datepicker .ui-datepicker-next span { display: block; position: absolute; left: 50%; margin-left: -8px; top: 50%; margin-top: -8px;  }
-.ui-datepicker .ui-datepicker-title { margin: 0 2.3em; line-height: 1.8em; text-align: center; }
-.ui-datepicker .ui-datepicker-title select { font-size:1em; margin:1px 0; }
-.ui-datepicker select.ui-datepicker-month-year {width: 100%;}
-.ui-datepicker select.ui-datepicker-month, 
-.ui-datepicker select.ui-datepicker-year { width: 49%;}
-.ui-datepicker table {width: 100%; font-size: .9em; border-collapse: collapse; margin:0 0 .4em; }
-.ui-datepicker th { padding: .7em .3em; text-align: center; font-weight: bold; border: 0;  }
-.ui-datepicker td { border: 0; padding: 1px; }
-.ui-datepicker td span, .ui-datepicker td a { display: block; padding: .2em; text-align: right; text-decoration: none; }
-.ui-datepicker .ui-datepicker-buttonpane { background-image: none; margin: .7em 0 0 0; padding:0 .2em; border-left: 0; border-right: 0; border-bottom: 0; }
-.ui-datepicker .ui-datepicker-buttonpane button { float: right; margin: .5em .2em .4em; cursor: pointer; padding: .2em .6em .3em .6em; width:auto; overflow:visible; }
-.ui-datepicker .ui-datepicker-buttonpane button.ui-datepicker-current { float:left; }
+
+.ui-datepicker {
+    width: 17em;
+    padding: .2em .2em 0;
+    display: none;
+}
+
+.ui-datepicker .ui-datepicker-header {
+    position: relative;
+    padding: .2em 0;
+}
+
+.ui-datepicker .ui-datepicker-prev,
+.ui-datepicker .ui-datepicker-next {
+    position: absolute;
+    top: 2px;
+    width: 1.8em;
+    height: 1.8em;
+}
+
+.ui-datepicker .ui-datepicker-prev-hover,
+.ui-datepicker .ui-datepicker-next-hover {
+    top: 1px;
+}
+
+.ui-datepicker .ui-datepicker-prev {
+    left: 2px;
+}
+
+.ui-datepicker .ui-datepicker-next {
+    right: 2px;
+}
+
+.ui-datepicker .ui-datepicker-prev-hover {
+    left: 1px;
+}
+
+.ui-datepicker .ui-datepicker-next-hover {
+    right: 1px;
+}
+
+.ui-datepicker .ui-datepicker-prev span,
+.ui-datepicker .ui-datepicker-next span {
+    display: block;
+    position: absolute;
+    left: 50%;
+    margin-left: -8px;
+    top: 50%;
+    margin-top: -8px;
+}
+
+.ui-datepicker .ui-datepicker-title {
+    margin: 0 2.3em;
+    line-height: 1.8em;
+    text-align: center;
+}
+
+.ui-datepicker .ui-datepicker-title select {
+    font-size: 1em;
+    margin: 1px 0;
+}
+
+.ui-datepicker select.ui-datepicker-month-year {
+    width: 100%;
+}
+
+.ui-datepicker select.ui-datepicker-month,
+.ui-datepicker select.ui-datepicker-year {
+    width: 49%;
+}
+
+.ui-datepicker table {
+    width: 100%;
+    font-size: .9em;
+    border-collapse: collapse;
+    margin: 0 0 .4em;
+}
+
+.ui-datepicker th {
+    padding: .7em .3em;
+    text-align: center;
+    font-weight: bold;
+    border: 0;
+}
+
+.ui-datepicker td {
+    border: 0;
+    padding: 1px;
+}
+
+.ui-datepicker td span,
+.ui-datepicker td a {
+    display: block;
+    padding: .2em;
+    text-align: right;
+    text-decoration: none;
+}
+
+.ui-datepicker .ui-datepicker-buttonpane {
+    background-image: none;
+    margin: .7em 0 0 0;
+    padding: 0 .2em;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 0;
+}
+
+.ui-datepicker .ui-datepicker-buttonpane button {
+    float: right;
+    margin: .5em .2em .4em;
+    cursor: pointer;
+    padding: .2em .6em .3em .6em;
+    width: auto;
+    overflow: visible;
+}
+
+.ui-datepicker .ui-datepicker-buttonpane button.ui-datepicker-current {
+    float: left;
+}
 
 /* with multiple calendars */
-.ui-datepicker.ui-datepicker-multi { width:auto; }
-.ui-datepicker-multi .ui-datepicker-group { float:left; }
-.ui-datepicker-multi .ui-datepicker-group table { width:95%; margin:0 auto .4em; }
-.ui-datepicker-multi-2 .ui-datepicker-group { width:50%; }
-.ui-datepicker-multi-3 .ui-datepicker-group { width:33.3%; }
-.ui-datepicker-multi-4 .ui-datepicker-group { width:25%; }
-.ui-datepicker-multi .ui-datepicker-group-last .ui-datepicker-header { border-left-width:0; }
-.ui-datepicker-multi .ui-datepicker-group-middle .ui-datepicker-header { border-left-width:0; }
-.ui-datepicker-multi .ui-datepicker-buttonpane { clear:left; }
-.ui-datepicker-row-break { clear:both; width:100%; font-size:0em; }
+.ui-datepicker.ui-datepicker-multi {
+    width: auto;
+}
+
+.ui-datepicker-multi .ui-datepicker-group {
+    float: left;
+}
+
+.ui-datepicker-multi .ui-datepicker-group table {
+    width: 95%;
+    margin: 0 auto .4em;
+}
+
+.ui-datepicker-multi-2 .ui-datepicker-group {
+    width: 50%;
+}
+
+.ui-datepicker-multi-3 .ui-datepicker-group {
+    width: 33.3%;
+}
+
+.ui-datepicker-multi-4 .ui-datepicker-group {
+    width: 25%;
+}
+
+.ui-datepicker-multi .ui-datepicker-group-last .ui-datepicker-header {
+    border-left-width: 0;
+}
+
+.ui-datepicker-multi .ui-datepicker-group-middle .ui-datepicker-header {
+    border-left-width: 0;
+}
+
+.ui-datepicker-multi .ui-datepicker-buttonpane {
+    clear: left;
+}
+
+.ui-datepicker-row-break {
+    clear: both;
+    width: 100%;
+    font-size: 0em;
+}
 
 /* RTL support */
-.ui-datepicker-rtl { direction: rtl; }
-.ui-datepicker-rtl .ui-datepicker-prev { right: 2px; left: auto; }
-.ui-datepicker-rtl .ui-datepicker-next { left: 2px; right: auto; }
-.ui-datepicker-rtl .ui-datepicker-prev:hover { right: 1px; left: auto; }
-.ui-datepicker-rtl .ui-datepicker-next:hover { left: 1px; right: auto; }
-.ui-datepicker-rtl .ui-datepicker-buttonpane { clear:right; }
-.ui-datepicker-rtl .ui-datepicker-buttonpane button { float: left; }
-.ui-datepicker-rtl .ui-datepicker-buttonpane button.ui-datepicker-current { float:right; }
-.ui-datepicker-rtl .ui-datepicker-group { float:right; }
-.ui-datepicker-rtl .ui-datepicker-group-last .ui-datepicker-header { border-right-width:0; border-left-width:1px; }
-.ui-datepicker-rtl .ui-datepicker-group-middle .ui-datepicker-header { border-right-width:0; border-left-width:1px; }
+.ui-datepicker-rtl {
+    direction: rtl;
+}
+
+.ui-datepicker-rtl .ui-datepicker-prev {
+    right: 2px;
+    left: auto;
+}
+
+.ui-datepicker-rtl .ui-datepicker-next {
+    left: 2px;
+    right: auto;
+}
+
+.ui-datepicker-rtl .ui-datepicker-prev:hover {
+    right: 1px;
+    left: auto;
+}
+
+.ui-datepicker-rtl .ui-datepicker-next:hover {
+    left: 1px;
+    right: auto;
+}
+
+.ui-datepicker-rtl .ui-datepicker-buttonpane {
+    clear: right;
+}
+
+.ui-datepicker-rtl .ui-datepicker-buttonpane button {
+    float: left;
+}
+
+.ui-datepicker-rtl .ui-datepicker-buttonpane button.ui-datepicker-current {
+    float: right;
+}
+
+.ui-datepicker-rtl .ui-datepicker-group {
+    float: right;
+}
+
+.ui-datepicker-rtl .ui-datepicker-group-last .ui-datepicker-header {
+    border-right-width: 0;
+    border-left-width: 1px;
+}
+
+.ui-datepicker-rtl .ui-datepicker-group-middle .ui-datepicker-header {
+    border-right-width: 0;
+    border-left-width: 1px;
+}
 
 /* IE6 IFRAME FIX (taken from datepicker 1.5.3 */
 .ui-datepicker-cover {
-    position: absolute; /*must have*/
-    z-index: -1; /*must have*/
-    filter: mask(); /*must have*/
-    top: -4px; /*must have*/
-    left: -4px; /*must have*/
-    width: 200px; /*must have*/
-    height: 200px; /*must have*/
+    position: absolute;
+    /*must have*/
+    z-index: -1;
+    /*must have*/
+    filter: mask();
+    /*must have*/
+    top: -4px;
+    /*must have*/
+    left: -4px;
+    /*must have*/
+    width: 200px;
+    /*must have*/
+    height: 200px;
+    /*must have*/
 }
 
 /*-----------------Table responsive--------------*/
-.table-responsive{
-	overflow-x: auto;
-	>*{
-		min-width: 800px;	
-	}
+.table-responsive {
+    overflow-x: auto;
+
+    > * {
+        min-width: 800px;
+    }
 }
