--- a/smart-content/samples/book/css - Copy/steve-jobs.css
+++ b/smart-content/samples/book/css - Copy/steve-jobs.css
@@ -65,7 +65,8 @@ form {
 .sj-book .book-content {
     font-family: "Stempel-Garamond-W01-Roman";
     font-size: 16px;
-    margin: 26px;
+    margin: -15px -20px;
+    /*    margin: 0;*/
 }
 
 .sj-book blockquote {
@@ -104,9 +105,10 @@ form {
     opacity: 0.9;
     cursor: pointer;
 }
+
 .sj-book .zoom-this {
-    max-width: 100% !important;
-    padding-top: 0% !important;
+    max-width: 92% !important;
+    padding-top: 4% !important;
 }
 
 .sj-book .book-content p {
@@ -136,11 +138,11 @@ form {
     -o-transition: -webkit-box-shadow 0.5s;
     -ms-transition: -ms-box-shadow 0.5s;
 
-    -webkit-box-shadow: 0 0 10px #999;
-    -moz-box-shadow: 0 0 10px #999;
-    -ms-box-shadow: 0 0 10px #999;
-    -o-box-shadow: 0 0 10px #999;
-    box-shadow: 0 0 10px #999;
+    -webkit-box-shadow: inset 0 0 100px #fff;
+    -moz-box-shadow: inset 0 0 100px #fff;
+    -ms-box-shadow: inset 0 0 100px #fff;
+    -o-box-shadow: inset 0 0 100px #fff;
+    box-shadow: inset 0 0 100px #fff;
 }
 
 .sj-book .page {
@@ -189,13 +191,12 @@ form {
     -ms-box-shadow: 0 0 20px #999;
     box-shadow: 0 0 20px #999;
 }
- 
 
 .sj-book .p1,
 .sj-book .p2,
 .sj-book .p3,
-.sj-book .p111,
-.sj-book .p112 {
+.sj-book .p-s-last,
+.sj-book .p-last {
     background-color: white;
     background-image: url(../pics/book-covers.jpg) !important;
 }
@@ -265,12 +266,12 @@ form {
     background-position: -1920px 0 !important;
 }
 
-.sj-book .p111 {
-    background-position: -960px 0 !important;
+.sj-book .p114 {
+    background: url(../pics/102.jpg);
 }
 
-.sj-book .p112 {
-    background-position: -1440px 0 !important;
+.sj-book .p115 {
+    background: url(../pics/103.jpg);
 }
 
 .sj-book .hard {
@@ -281,6 +282,10 @@ form {
     -moz-box-shadow: none;
     -ms-box-shadow: none;
     box-shadow: none;
+    /*
+    -webkit-background-size: contain;
+    background-size: contain ;
+*/
 }
 
 .sj-book .page-wrapper {
@@ -327,7 +332,7 @@ form {
 .sj-book .page-number {
     color: #999;
     width: 100%;
-    bottom: 25px;
+    bottom: 0px;
     position: absolute;
     display: block;
     text-align: center;
@@ -403,6 +408,13 @@ form {
     background-repeat: repeat-y;
 }
 
+/*
+.sj-book .shadow{
+            background: #fff !important;
+        }*/
+
+
+/*---------------------------------------*/
 a.ui-slider-handle.ui-corner-all.ui-state-default {
     z-index: 10000 !important;
 }
