--- a/smart-content/samples/book/css/steve-jobs.css
+++ b/smart-content/samples/book/css/steve-jobs.css
@@ -194,12 +194,18 @@ form {
 .sj-book .p1,
 .sj-book .p2,
 .sj-book .p3,
-.sj-book .p111,
-.sj-book .p112 {
+.sj-book .p115,
+.sj-book .p116 {
     background-color: white;
     background-image: url(../pics/book-covers.jpg) !important;
 }
-
+/*--------------------rishi--------------------------*/
+/*
+.sj-book .p115{
+    background: transparent !important;
+}
+*/
+/*--------------------rishi--------------------------*/
 .sj-book .p1 {
     background-position: 0 0;
 }
@@ -265,11 +271,11 @@ form {
     background-position: -1920px 0 !important;
 }
 
-.sj-book .p111 {
+.sj-book .p115 {
     background-position: -960px 0 !important;
 }
 
-.sj-book .p112 {
+.sj-book .p116 {
     background-position: -1440px 0 !important;
 }
 
@@ -421,4 +427,7 @@ a.ui-slider-handle.ui-corner-all.ui-state-default {
     border-radius: 10px;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
     background: #fff;
+}
+.p114 img{
+    display: none;
 }
